# spectral-telemetry

./: .gitignore  CITATION.cff  LICENSE  NOTICE.md  README.md  pyproject.toml
.github/workflows/: ci.yml
benchmarks/: benchmark_probe_overhead.py
docs/: benchmarks.md
examples/: huggingface_gpt2.py  probe_quickstart.py  transformer_lm.py
src/spectral_telemetry/: __init__.py  telemetry.py
src/spectral_telemetry/core/: __init__.py  fits.py  frequency.py  ranks.py  schema.py
src/spectral_telemetry/torch_backend/: __init__.py  distributed.py  guards.py  probe.py  streaming.py
tests/: conftest.py  test_diagnostics_and_numerics.py  test_distributed.py  test_fits.py  test_frequency.py  test_guards_and_facade.py  test_masks_and_context.py  test_probe_api.py  test_probe_ergonomics.py  test_ranks.py  test_schema.py  test_streaming_equivalence.py
